--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ button {
   border: 2px solid;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 1.2rem;
+  outline: none;
 }
 
 #clock {
