Added pointer to button

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 1.2rem;
   outline: none;
+  cursor: pointer;
 }
 
 #clock {
