--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 265px;
+  /* height: 265px; */
+  flex: 2;
 }
 
 button {
@@ -46,10 +47,34 @@ button {
   font-size: 2rem;
 }
 
+.lunch-break-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex: 2;
+  width: 60%;
+}
+
+.lunch-break-text {
+  font-size: 6em;
+}
+
+.spacer {
+  flex: 1
+}
+
 .hidden {
   display: none;
 }
 
+.not-visible {
+  visibility: hidden;
+}
+
 .show {
   display: flex;
+}
+
+.visible {
+  visibility: visible;
 }
